objects/vlocity_ins__VlocityAPIMetadata__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__APIHandler__c</fullName>
        <description>Name of the Batch cache population class Eg. DefaultGetCatalogMatrixCHandler</description>
        <label>API Cache Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__APIKey__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__APIName__c</fullName>
        <description>Name of the metadata API</description>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__APIParams__c</fullName>
        <description>Config, Query parameteres  and overridden Query of the API eg. {&quot;pageSize&quot;:&quot;2&quot;, &quot;orderBy&quot;:&quot;Name desc&quot;, &quot;ordering&quot;:&quot;Name,ProductCode&quot;, &quot;fields&quot;:&quot;ProductCode&quot;, &quot;query&quot;:&quot;SELECT gs_cmt__CatalogId__c,gs_cmt__Product2Id__c,gs_cmt__SequenceNumber__c FROM gs_cmt__CatalogProductRelationship__c&quot;}</description>
        <label>API Params</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__APIResponseHandler__c</fullName>
        <description>Name of the Batch Response Handler class Eg. DefaultOfferDetailsRHandler</description>
        <label>API Response Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__APIUrl__c</fullName>
        <description>API url eg. /v3/catalogs?context={contextParams}</description>
        <label>API Url</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BatchClassName__c</fullName>
        <description>Name of the inherited batch class used in the API</description>
        <inlineHelpText>Name of the inherited batch class used in the API</inlineHelpText>
        <label>BatchClassName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>active batch cache rows</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastCachedTime__c</fullName>
        <label>Last Cached Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastEffectiveStartTime__c</fullName>
        <label>Last Effective Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastExpirationTime__c</fullName>
        <label>Last Expiration Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MatrixName__c</fullName>
        <description>Name of the vlocity calculation matrics to be used in the API</description>
        <inlineHelpText>Name of the vlocity calculation matrics to be used in the API</inlineHelpText>
        <label>MatrixName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <description>Sequence to run batch jobs</description>
        <inlineHelpText>Sequence of batch jobs</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Vlocity API Metadata</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>Metadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vlocity API Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>